--- a/assets/styleRutina.css
+++ b/assets/styleRutina.css
@@ -57,3 +57,16 @@ h2{
     color: black;
     font-size: 2.5rem;
 }
+
+.presentacion_de_app{
+    margin: 5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.presentacion_de_app h3{
+    margin: 2.5vh;
+    font-size: 1.25rem;
+    color: black;
+    font-style: italic;
+}
